@@ -1,3 +1,9 @@
+2008-10-16  Tristan Gingold  <gingold@adacore.com>
+
+	* configure.in: Bump version to 2.19
+	* Makefile.am (RELEASE): Set.
+	* configure, Makefile.in: Regenerated.
+
 2008-10-09  Tristan Gingold  <gingold@adacore.com>
 
 	* configure.in: Bump version to 2.18.93
